fixed align-items stretch for column-wrap

--- a/031_flexbox/01_container/06_align-items/04_stretch/02_column/main.css
+++ b/031_flexbox/01_container/06_align-items/04_stretch/02_column/main.css
@@ -3,7 +3,7 @@
 body {
     display: flex;
     flex-flow: column wrap;
-    align-items: center;
+    align-items: stretch;
     /* formatting */
     height: 700px;
     border: 5px solid red;
@@ -14,7 +14,7 @@ body {
 
 div {
     /* formatting */
-    width: 200px;
+    /* width: 200px; */
     height: 100px;
     margin: 1em;
     border: 1px solid red;
